[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crossdeploy"
version = "0.1.0"
authors = [
  { name="Randy Phoa", email="hello@crossdeploy.io" },
]
description = "A declarative approach to manage MLOps resources"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]